app/scss/components/_popup.scss
.popup {
  position: relative;
  display: none;
  position: fixed;
  background-color: transparent;
  padding: 2rem;
  z-index: 20;

  &__show {
    display: block;
  }

  &__hide {
    display: none;
  }

  &__grid {
    display: grid;
    gap: 1rem;
    grid-template-columns: 1fr 1fr 1fr 1fr;
    position: fixed;
    left: 50%;
    top: 45%;
    transform: translate(-50%, -50%);

    &-item {
      background-color: #fff;
      width: 300px;
      height: 300px;
    }
  }

  &__btn-hide {
    position: fixed;
    left: 50%;
    top: 93%;
    transform: translate(-50%, -50%);
  }

  &__relay {
    position: fixed;
    left: 50%;
    top: 85%;
    transform: translate(-50%, -50%);
    background-color: var(--blue-100);
    padding: 1rem;

    &-light {
      position: relative;
      width: 30px;
      height: 10px;
      border-radius: 3px;
      background-color: var(--success-700);
      box-shadow: 0 0 3px var(--success-500);

      &--disabled {
        background-color: var(--warm-gray-500);
        box-shadow: 0 0 3px var(--warm-gray-200);
      }

      &::after {
        content: "";
        position: absolute;
        top: 1px;
        left: 50%;
        width: 25px;
        height: 2px;
        background-color: hsl(0deg 0% 100%);
        transform: translateX(-50%);
        filter: blur(1px);
      }
    }

  }
}

.popup:after {
  position: fixed;
  content: "";
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.5);
  z-index: -2;
}

